[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/combat/detection/in_range.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 60.0

[node name="InRange" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="body_in_range_entered"]
[connection signal="body_exited" from="." to="." method="body_in_range_exited"]
